--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
+    android:orientation="vertical"
     >
-
-    <include
-
-        layout="@layout/listview"
-
+    <Button
+        android:id="@+id/JinRu"
         android:layout_width="match_parent"
-
-        android:layout_height="match_parent"
-
-        android:layout_marginTop="?attr/actionBarSize" />
-    <android.support.design.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_scrollFlags="scroll|enterAlways|snap"
-                />
-            <com.miguelcatalan.materialsearchview.MaterialSearchView
-
-                android:id="@+id/search_view"
-
-                style="@style/MaterialSearchViewStyle"
-
-                android:layout_width="match_parent"
-
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-
-    </android.support.design.widget.CoordinatorLayout>
-</android.support.v4.widget.DrawerLayout>
+        android:layout_height="wrap_content"
+        android:text="进入"
+        android:textSize="20sp"/>
+</LinearLayout>
