--- a/app/src/main/res/layout/fruit_item.xml
+++ b/app/src/main/res/layout/fruit_item.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
+        android:background="#ffffffff"
         />
     <TextView
         android:id="@+id/fruit_name"
